# Template-UV-FastAPI-MongoDB-Beanie

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test.py
api/middlewares/: auth.py  errorHandling.py
api/routes/: auth.py  base.py  users.py
models/: UsersModel.py
services/: users.py
tests/: test_users.py
utils/: database.py
